--- a/House_Price_Prediction.ipynb
+++ b/House_Price_Prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO5eFOAS8r/pRxsGMJi5nEw",
+      "authorship_tag": "ABX9TyMUpsYHjWyzTP7jgHZShza0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Importing the ependencies"
+        "Importing the dependencies"
       ],
       "metadata": {
         "id": "XAIzN2u5nATF"
