--- a/House_Price_Prediction.ipynb
+++ b/House_Price_Prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNsGI+2L7bU8+ewEuJaAZia",
+      "authorship_tag": "ABX9TyMijd6et6qiupLDkkWl6hcM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,8 +56,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "\n",
-        "Importing the Boston House Price dataset"
+        "Importing the California House Price dataset"
       ],
       "metadata": {
         "id": "57ZlBbRqoeT3"
@@ -66,33 +65,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# house_price_dataset = sklearn.datasets.load_boston()"
-      ],
-      "metadata": {
-        "id": "rrkyORuxoqZG"
-      },
-      "execution_count": 2,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# data_url = \"http://lib.stat.cmu.edu/datasets/boston\"\n",
-        "# raw_df = pd.read_csv(data_url, sep=\"\\s+\", skiprows=22, header=None)\n",
-        "# print(raw_df.head(10))\n",
-        "# data = np.hstack([raw_df.values[::2, :], raw_df.values[1::2, :2]])\n",
-        "# target = raw_df.values[1::2, 2]"
-      ],
-      "metadata": {
-        "id": "3zYOAQLqmKJ-"
-      },
-      "execution_count": 3,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# from sklearn.datasets import fetch_california_housing\n",
         "house_price_dataset = sklearn.datasets.fetch_california_housing()\n",
         "house_price_dataset"
       ],
